flick on mobile fix

--- a/assets/css/scss/_claim-page.scss
+++ b/assets/css/scss/_claim-page.scss
@@ -88,6 +88,11 @@
     width: 90%;
     margin: auto;
     left: 0;
+
+    @media (max-width: 400px) {
+      width: 75%;
+    }
+
     img {
       transform: translateY(15vh);
     }
